Revision history for Perl application Wx::Demo.

0.05
	- Added wxAuiNotebook to the AUI demo.

0.04  Sun Nov 12 18:20:32 CET 2006
	- Added demo for Advanced User Interface (AUI).
	- Improved the wxRichTextCtrl demo.

0.03  Sat Nov 11 16:50:00 CET 2006
	- Added demos for the book and picker controls.
	- Added demo for wxRichTextCtrl.

0.02  Tue Aug 29 21:24:53 CEST 2006
	- Work with wxWidgets 2.5.3.

0.01  Sun Aug 27 17:30:34 CEST 2006
	- First public release.